Implement delayed loading of slow icons (from .desktop or .directory files)

Thanks to Pierre Sauter for making me fix this, and for testing that it
works over sshfs.

FIXED-IN: 4.10.2
BUG: 290666